@@ -224,7 +224,7 @@ protected:
   wxSpinCtrl* m_bitmapScale;
   wxCheckBox* m_fixReorderedIndices;
   wxCheckBox* m_incrementalSearch;
-  wxCheckBox* m_showUserDefinedLabels;
+  wxChoice* m_showUserDefinedLabels;
   wxButton* m_getFont;
   wxButton* m_getStyleFont;
   wxFontEncoding m_fontEncoding;
