@@ -1,5 +1,7 @@
 Current:
   * A config item that allows to disable printing of Cell brackets
+  * Cell brackets of inactive cells can now be hidden
+  * Due to popular demand we can now suppress the output of automatic labels.
   * The option to use a Minus instead of a Hyphen.
   * Table of Contents: Folded items are now grayed out.
   * Table of Contents: A right-click menu.
